=== HEAD

* Emulate Database#create_or_replace_view if not supported directly (jeremyevans)

* Add Dataset#paged_each, for processing entire datasets without keeping all rows in memory (jeremyevans)

* Add Sequel::ConstraintViolation exception class and subclasses for easier exception handling (jeremyevans)

* Fix use of identity_map plugin with many_to_many associations with right composite keys (chanks) (#603)

* Increase virtual row performance by using a shared VirtualRow instance (jeremyevans)

* Allow the :dataset association option to accept the association reflection as an argument (jeremyevans)

* Improve association method performance by caching intermediate dataset (jeremyevans)

=== 3.43.0 (2013-01-08)

* Move the #meta_def support for Database, Dataset, and Model to the meta_def extension (jeremyevans)

* Fix Database#copy_into on jdbc/postgres when an exception is raised (jeremyevans)

* Add core_refinements extension, providing refinement versions of Sequel's core extensions (jeremyevans)

* Make Database#copy_into raise a DatabaseError if the database signals an error in the postgres adapter (jeremyevans)

* Define respond_to_missing? where method_missing is defined and the object supports respond_to? (jeremyevans)

* Allow lambda procs with 0 arity as virtual row blocks on ruby 1.9 (jeremyevans)

* Handle schema-qualified row_types in the pg_array integration in the pg_row extension (jeremyevans) (#595)

* Support default_schema when reseting primary key sequences on PostgreSQL (jeremyevans) (#596)

* Allow treating tinyint(1) unsigned columns as booleans in the mysql adapters (jeremyevans)

* Support the jdbc-hsqldb gem in the jdbc adapter, since it has been updated to 2.2.9 (jeremyevans)

* Work with new jdbc-* gems that require manual driver loading (kares) (#598)

* Cast blobs correctly on DB2 when use_clob_as_blob is false (mluu, jeremyevans) (#594)

* Add date_arithmetic extension for database-independent date calculations (jeremyevans)
