@@ -1,5 +1,7 @@
 === HEAD
 
+* Add support for temporary views on SQLite and PostgreSQL via the :temp option to create_view (chanks, jeremyevans)
+
 * Emulate Database#create_or_replace_view if not supported directly (jeremyevans)
 
 * Add Dataset#paged_each, for processing entire datasets without keeping all rows in memory (jeremyevans)
